<resources>
    <string name="app_name">Contatos</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_residencial">Telefone Residencial</string>
    <string name="telefone_comercial">Telefone Comercial</string>
    <string name="celular">Celular</string>
    <string name="site_pessoal">Site Pessoal</string>
    <string name="adicionar_telefone_celular">Adicionar telefone celular</string>
    <string name="enviar_email">Enviar email</string>
    <string name="ligar">Ligar</string>
    <string name="acessar_site_pessoal">Acessar site pessoal</string>
    <string name="exportar_pdf">Exportar PDF</string>
    <string name="salvar">Salvar</string>
    <string name="enviar_e_mail">Enviar E-mail</string>
    <string name="chamar">Chamar</string>
    <string name="acessar_site">Acessar site</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
</resources>