<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <TextView
        android:id="@+id/nomeContatoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailContatoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/site_pessoal"
        app:layout_constraintEnd_toStartOf="@id/telefoneContatoTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeContatoTv"
        app:layout_constraintRight_toLeftOf="@id/telefoneContatoTv"/>

    <TextView
        android:id="@+id/telefoneContatoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailContatoTv"
        app:layout_constraintTop_toBottomOf="@id/nomeContatoTv"
        app:layout_constraintLeft_toRightOf="@id/emailContatoTv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>